scrollbar fixes

--- a/CSUEB-html/scss/components/_text-img-sec.scss
+++ b/CSUEB-html/scss/components/_text-img-sec.scss
@@ -736,7 +736,7 @@
 
     }
 
-    a:not(.btn) {
+    a:not([class]) {
       text-decoration: underline !important;
     }
 
